--- a/src/client/app/+alphabet/alphabet.component.html
+++ b/src/client/app/+alphabet/alphabet.component.html
@@ -3,14 +3,10 @@
     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-md-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 
       <md-card>
-        <md-card-title>
-          <md-card-title-text>
-            <span class="md-headline">Введи имя и НАЖИМАЙ</span>
-          </md-card-title-text>
-        </md-card-title>
-        <md-card-content>
-        </md-card-content>
+        <span class="letter">{{currentLetter.letter}}</span>
+        <img src="{{currentLetter.imageUrl}}" class="md-card-image">
         <md-card-actions layout="row" layout-align="end center">
+          <button md-button class="next" (click)="next()">Next</button>
         </md-card-actions>
       </md-card>
     </div>
