Standings and melody layout

--- a/src/client/app/+melody/melody.component.html
+++ b/src/client/app/+melody/melody.component.html
@@ -1,1 +1,38 @@
-<div>Melody component</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-md-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+
+      <md-card class="category-card">
+        <md-card-header-text class="category-title magenta">
+          <span class="md-title">Песни из мультфильмов</span>
+        </md-card-header-text>
+        <img src="assets/melody/notes.png" class="md-card-image category">
+        <span class="glyphicon glyphicon-play play-icon"></span>
+        <md-card-actions layout="column" layout-align="start">
+          <button md-raised-button class="md-raised md-primary">Катя</button>
+          <button md-raised-button class="md-raised">Вика</button>
+          <button md-raised-button class="md-raised">Леша</button>
+        </md-card-actions>
+      </md-card>
+      <md-card class="inactive category-card">
+        <md-card-header-text class="category-title green">
+          <span class="md-title">Песни из кино</span>
+        </md-card-header-text>
+        <img src="assets/melody/notes.png" class="md-card-image category">
+        <span class="glyphicon glyphicon-pause play-icon"></span>
+      </md-card>
+      <md-card class="inactive category-card">
+        <md-card-header-text class="category-title violet">
+          <span class="md-title">Поп музыка</span>
+        </md-card-header-text>
+        <img src="assets/melody/notes.png" class="md-card-image category">
+      </md-card>
+      <md-card class="inactive category-card">
+        <md-card-header-text class="category-title orange">
+          <span class="md-title">РОК</span>
+        </md-card-header-text>
+        <img src="assets/melody/notes.png" class="md-card-image category">
+      </md-card>
+    </div>
+  </div>
+</div>
