Little style fix

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1,6 +1,6 @@
 <ip-navbar></ip-navbar>
 <div class="content">
-  <md-sidenav-layout>
+  <md-sidenav-layout class="md-whiteframe-3dp">
     <md-sidenav #left (open)="mybutton.focus()" [opened]="true" mode="side" layout-padding>
       <ip-standings></ip-standings>
     </md-sidenav>
