--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -2,4 +2,6 @@
   <a [routerLink]="['/']">Угадай мелодию</a>
   <a [routerLink]="['/alphabet']">Алфавит</a>
   <a [routerLink]="['/register']">Игрок</a>
+
+  <button md-raised-button (click)="deleteResponses()" class="md-raised md-primary">Очистить</button>
 </nav>
